--- a/ex03/src/main/resources/messages.properties
+++ b/ex03/src/main/resources/messages.properties
@@ -7,3 +7,5 @@ ResultService.fail.test=Sorry. You fail test.
 StudentService.input.first.name=Please input your first name
 StudentService.input.last.name=Please input your last name
 TestService.answer.the.questions=Please answer the questions below
+TestService.number=Number
+TestService.number.in.range=Enter the number in specified range
